data/diff_tests/wasmtime/nop_IncorrectHandlingofControlFlowAcrossModuleBoundaries_824.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
    "\00\01\7f\02\99\80\80\80\00\01\03\65\6e\76\11\65"
    "\78\74\65\72\6e\61\6c\5f\66\75\6e\63\74\69\6f\6e"
    "\00\00\03\82\80\80\80\00\01\00\0a\8c\80\80\80\00"
    "\01\86\80\80\80\00\00\01\10\00\01\0b"
  )
""
)